--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<PageTitle>Pay Path - Home</PageTitle>
 
 <!-- Page Background-->
 <div class="pageStyle h-100 d-flex justify-content-center">
@@ -18,7 +18,7 @@
                 </p>
             </div>
             <div class="mt-3">
-                <button type="button" class="rounded btn btn-primary">Start Calculating</button>
+                <a href="/calculator" class="rounded btn btn-primary">Start Calculating</a>
             </div>
             <div class="mt-3">
                 Built with pride using:
@@ -26,7 +26,7 @@
                     <div><i class="devicons devicon-csharp-plain colored me-1" /></div>
                     <div><i class="devicons devicon-blazor-plain colored me-1" /></div>
                     <div><i class="devicons devicon-bootstrap-plain colored me-1" /></div>
-                    <div><i class="devicons devicon-javascript-plain colored me-1" /></div>
+                    @* <div><i class="devicons devicon-javascript-plain colored me-1" /></div> *@
                     <div><i class="devicons devicon-html5-plain colored me-1" /></div>
                     <div><i class="devicons devicon-css3-plain colored me-1" /></div>
                 </div>
